# CodexBar-windows

./: .gitignore  CodexBar Windows Options.md  FRONTEND_PLAN.md  README.md  codexbarwindows.docs.txt  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  notifications.rs  refresh.rs  settings.rs  single_instance.rs  sound.rs  state.rs
src-tauri/src/browser/: cookies.rs  detection.rs  mod.rs
src-tauri/src/cli/: account.rs  config.rs  cost.rs  diagnostics.rs  main.rs  usage.rs
src-tauri/src/core/: credentials.rs  mod.rs  provider.rs  rate_window.rs  usage_snapshot.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/claude/: mod.rs  oauth.rs  web_api.rs
src-tauri/src/providers/codex/: api.rs  mod.rs
src-tauri/src/providers/copilot/: api.rs  device_flow.rs  mod.rs
src-tauri/src/providers/cursor/: api.rs  mod.rs
src-tauri/src/providers/gemini/: api.rs  mod.rs
src-tauri/src/status/: mod.rs
src-tauri/src/tray/: animation.rs  manager.rs  mod.rs  renderer.rs
src/components/: AccentColorPicker.tsx  AlertsLog.tsx  AppHeader.tsx  CommandPalette.tsx  CompactProviderRow.tsx  CopilotLoginDialog.tsx  CostEstimation.tsx  DashboardWidgets.tsx  EfficiencyScore.tsx  EmptyState.tsx  ErrorBoundary.tsx  ExportUsage.tsx  HeaderBar.tsx  MainWindow.tsx  ProgressBar.tsx  ProviderCard.tsx  ProviderDeepDive.tsx  QuickStats.tsx  ResetCountdown.tsx  ResetTimer.tsx  SearchFilter.tsx  SessionSummary.tsx  SettingsPage.tsx  ShortcutsHelp.tsx  SmartInsights.tsx  StatusBar.tsx  StatusDot.tsx  StatusPanel.tsx  UpdateBanner.tsx  UsageBudget.tsx  UsageHeatmap.tsx  UsageHistoryChart.tsx  UsagePredictions.tsx  WeeklySummary.tsx
src/data/: mockData.ts
src/hooks/: useProviderStatus.ts  useProviders.ts  useSettings.ts  useUsageData.ts  useUsageTrends.ts
src/lib/: api.ts  colors.ts  types.ts  (+1 more)
(+3 files in other folders)
